<resources>
    <string name="app_name">My App Porfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodegree Apps!</string>
    <string name="SPOTIFY_STEAMER">SPOTIFY STEAMER</string>
    <string name="SCORES_APP">SCORES APP</string>
    <string name="LIBRARY_APP">LIBRARY APP</string>
    <string name="BUILD_IT_BIGGER">BUILD IT BIGGER</string>
    <string name="XYZ_READER">XYZ READER</string>
    <string name="CAPSTONE_MY_OWN_APP">CAPSTONE: MY OWN APP</string>
    <string name="title_activity_movie_list">Pop Movies</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_sort_by">Sort By</string>
    <string-array name="pref_movie_sort_by_title">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favourites</item>
    </string-array>
    <string-array name="pref_movie_sort_by_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
        <item>favourites</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_movie_sort">Sort Movies</string>
    <string name="movie_sort_by">movie_sort_by</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="review_header">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="no_data_to_display">There are no movies marked as favourite.</string>
    <string name="no_movie_selected">Please select movie for details.</string>
</resources>
