<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEAF2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gandivainc.myappporfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/main_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:text="@string/main_title"
                android:textColor="#7D8B98"
                android:textSize="16sp" />

            <Button
                android:id="@+id/main_spotifysteamer_btn"
                style="@style/LaunchAppButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_title_text"
                android:onClick="launchSpotifySteamer"
                android:text="@string/SPOTIFY_STEAMER" />

            <Button
                android:id="@+id/main_scoresapp_btn"
                style="@style/LaunchAppButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_spotifysteamer_btn"
                android:onClick="launchScoresApp"
                android:text="@string/SCORES_APP" />

            <Button
                android:id="@+id/main_libraryapp_btn"
                style="@style/LaunchAppButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_scoresapp_btn"
                android:onClick="launchLibraryApp"
                android:text="@string/LIBRARY_APP" />

            <Button
                android:id="@+id/main_builditbigger_btn"
                style="@style/LaunchAppButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_libraryapp_btn"
                android:onClick="launchBuilditBigger"
                android:text="@string/BUILD_IT_BIGGER" />

            <Button
                android:id="@+id/main_xyzreader_btn"
                style="@style/LaunchAppButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_builditbigger_btn"
                android:onClick="launchXyzReader"
                android:text="@string/XYZ_READER" />

            <Button
                android:id="@+id/main_capstone_btn"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_xyzreader_btn"
                android:layout_centerHorizontal="true"
                android:layout_margin="2dp"
                android:layout_marginTop="10dp"
                android:background="#D50000"
                android:onClick="launchMyOwnApp"
                android:text="@string/CAPSTONE_MY_OWN_APP"
                android:textColor="#FFFFFF"
                android:textSize="12dp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
