<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gandivainc.myappporfolio.MovieDetailsActivityFragment"
    tools:showIn="@layout/activity_movie_details">

    <TextView
        android:id="@+id/movie_not_selected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_movie_selected" />

    <ScrollView
        android:id="@+id/movie_details_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_details_title"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#009688"
                android:gravity="center_vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#FFFFFF"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/movie_details_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/movie_details_title"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18dp" />

            <ImageView
                android:id="@+id/movie_details_poster"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/movie_details_synopsis"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/movie_details_favourite_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_details_synopsis"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/movie_details_poster"
                android:src="@drawable/favourite_star" />

            <TextView
                android:id="@+id/movie_details_voteaverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_details_synopsis"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/movie_details_favourite_star"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/movie_details_favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_details_favourite_star"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_toRightOf="@id/movie_details_poster"
                android:onClick="maintainFavourite"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/movie_details_poster"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/movie_details_trailer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/movie_details_poster"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/trailer_play"
                    android:onClick="launchMovieTrailer"
                    android:paddingLeft="8dp"
                    android:text="@string/trailer"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/movie_details_review_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:drawableLeft="@drawable/movie_review"
                    android:onClick="launchMovieReview"
                    android:paddingLeft="8dp"
                    android:text="@string/review_header"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
